--- a/src/components/projects-section-files/carousel.css
+++ b/src/components/projects-section-files/carousel.css
@@ -1,10 +1,4 @@
 .card-container {
-}
-
-.card-container {
-}
-
-.card-container {
   padding: 30px 10px;
   transition: 0.4s ease-in;
 }
@@ -39,12 +33,18 @@ input[type="radio"] {
 
 .card-img {
   width: 100%;
-  height: 70%;
-  border-radius: 10px;
-  background: #626060;
-  box-shadow: -14px -10px 105px 0px rgba(0, 0, 0, 0.75) inset;
-  -webkit-box-shadow: -14px -10px 105px 0px rgba(0, 0, 0, 0.75) inset;
-  -moz-box-shadow: -14px -10px 105px 0px rgba(0, 0, 0, 0.75) inset;
+  height: 55%;
+  border: 2px solid rgb(144, 144, 144);
+
+  background: #292929;
+  box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
+  -webkit-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
+  -moz-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
+}
+.project-img {
+  height: 100%;
+  width: 65%;
+  box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75);
 }
 
 #item-1:checked ~ .cards #card-3,
