--- a/src/components/projects-section-files/carousel.css
+++ b/src/components/projects-section-files/carousel.css
@@ -32,6 +32,7 @@ input[type="radio"] {
 }
 
 .card-img {
+  display: flex;
   width: 100%;
   height: 55%;
   border: 2px solid rgb(144, 144, 144);
@@ -41,6 +42,25 @@ input[type="radio"] {
   -webkit-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
   -moz-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
 }
+.project-textarea {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.project-textarea p {
+  line-height: 1.5em;
+  font-size: 10px;
+  padding: 15px;
+}
+
+.project-textarea h3 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 16px;
+  border-bottom: 1px solid white;
+}
+
 .project-img {
   height: 100%;
   width: 65%;
