--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,33 @@ body {
   vertical-align: middle;
   padding: 0 15px;
 }
+
+.about-img {
+  height: 200px;
+  padding-left: 50px;
+}
+
+.about-p {
+  margin: 0;
+  padding-top: 50px;
+  padding-right: 50px;
+  max-width: 60%;
+}
+
+.text-container {
+  width: 65%;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-top: 50px;
+  padding-bottom: 0;
+}
+
+.kontaktinfo-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.kontaktinfo-list li {
+  margin-top: 15px;
+}
