--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -10,9 +10,7 @@ input[type="radio"] {
 .card {
   position: absolute;
   width: 70vh;
-  height: 70vh;
-  min-width: 70vh;
-  min-height: 70vh;
+  height: 40vh;
 
   transition: transform 0.4s ease;
   cursor: pointer;
@@ -21,25 +19,20 @@ input[type="radio"] {
 .card-container {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  max-height: 450px;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .cards {
-  position: relative;
   width: 70vh;
-  height: 70vh;
+  height: 40vh;
   margin-bottom: 20px;
 }
 
 .card-img {
   display: flex;
-  width: 110%;
-  height: 55%;
-  min-width: 450px;
-  min-height: 250px;
+  width: 600px;
+  height: 335px;
   border: 2px solid rgb(144, 144, 144);
 
   background: #292929;
@@ -54,13 +47,13 @@ input[type="radio"] {
   align-items: center;
 }
 .project-textarea p {
-  line-height: 1.5em;
+  line-height: 1.8em;
   font-size: 0.6em;
-  padding: 0.7em 2em 2.5em;
+  padding: 1.7em 4em 2.5em;
 }
 
 .project-textarea h3 {
-  padding-top: 0.5em;
+  padding-top: 2.5em;
   padding-bottom: 0.5em;
   font-size: 0.9em;
   border-bottom: 1px solid white;
@@ -76,7 +69,7 @@ input[type="radio"] {
 #item-2:checked ~ .cards #card-1,
 #item-3:checked ~ .cards #card-2 {
   transform: translatex(-40%) scale(0.8);
-  opacity: 0.4;
+  opacity: 0.3;
   z-index: 0;
 }
 
@@ -84,7 +77,7 @@ input[type="radio"] {
 #item-2:checked ~ .cards #card-3,
 #item-3:checked ~ .cards #card-1 {
   transform: translatex(40%) scale(0.8);
-  opacity: 0.4;
+  opacity: 0.3;
   z-index: 0;
 }
 
