--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Playfair+Display:wght@400;600&display=swap");
 body {
   margin: 0;
   background: black;
@@ -42,4 +41,27 @@ body {
 
 .kontaktinfo-list li {
   margin-top: 15px;
+}
+
+#undertext {
+  color: grey;
+}
+
+.headline {
+  font-weight: 400;
+  font-size: 40px;
+}
+
+hr {
+  margin: 30px 0;
+  height: 1px;
+  border: none;
+  background: -webkit-gradient(
+    linear,
+    0 0,
+    100% 0,
+    from(transparent),
+    to(transparent),
+    color-stop(50%, rgb(0, 247, 230))
+  );
 }
