--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -9,8 +9,6 @@ input[type="radio"] {
 
 .card {
   position: absolute;
-  height: 40vh;
-
   transition: transform 0.4s ease;
   cursor: pointer;
 }
@@ -23,17 +21,17 @@ input[type="radio"] {
 }
 
 .cards {
-  width: 80vh;
+  width: 50%;
   margin-bottom: 20px;
 }
 
 .card-img {
   display: flex;
-  width: 540px;
-  height: 340px;
+  width: 650px;
+  height: 350px;
   border: 2px solid rgb(144, 144, 144);
 
-  background: #292929;
+  background: #1b1b1b;
   box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
   -webkit-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
   -moz-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
@@ -54,7 +52,9 @@ input[type="radio"] {
   padding-top: 2.5em;
   padding-bottom: 0.5em;
   font-size: 0.9em;
-  border-bottom: 1px solid white;
+  border-width: 0 0 1px 0px;
+  border-style: solid;
+  border-image: linear-gradient(to left, transparent, aqua, transparent) 1;
 }
 
 .project-img {
