--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Playfair+Display:wght@400;600&display=swap");
 body {
   margin: 0;
-  background: black;
-  color: white;
-  font-family: montserrat;
-  letter-spacing: 0.15em;
-}
-
-.icon {
-  vertical-align: middle;
-  padding: 10px 0px;
-  margin-left: 15px;
-}
-
-.about-img {
-  height: 250px;
-  padding-left: 50px;
-}
-
-.about-p {
-  margin: 0;
-  padding-right: 50px;
-  max-width: 60%;
-}
-
-.text-container {
-  width: 65%;
-  margin: 0 auto;
-  padding-left: 40px;
-  padding-top: 50px;
-  padding-bottom: 0;
-}
-
-.kontaktinfo-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.kontaktinfo-list li {
-  margin-top: 15px;
-}
-
-#undertext {
-  color: grey;
-}
-
-.headline {
-  font-weight: 400;
-  font-size: 40px;
-}
-
-hr {
-  margin: 30px 0;
-  height: 1px;
-  border: none;
-  background: -webkit-gradient(
-    linear,
-    0 0,
-    100% 0,
-    from(transparent),
-    to(transparent),
-    color-stop(50%, rgb(0, 247, 230))
-  );
+  background: rgb(21, 21, 21);
 }
