--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -31,7 +31,7 @@ input[type="radio"] {
   height: 350px;
   border: 2px solid rgb(144, 144, 144);
 
-  background: #1b1b1b;
+  background: #1c1c1c;
   box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
   -webkit-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
   -moz-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
@@ -43,9 +43,12 @@ input[type="radio"] {
   align-items: center;
 }
 .project-textarea p {
+  padding-top: 1em;
+  padding-left: 2.5em;
   line-height: 1.2em;
-  font-size: 14px;
+  font-size: 12px;
   width: 150px;
+  color: rgb(206, 205, 205);
 }
 
 .project-textarea h3 {
