--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Playfair+Display:wght@400;600&display=swap");
 body {
-  margin: 0;
-  background: rgb(0, 0, 0);
+  margin: 0 auto;
+  background: #121314;
+}
+
+@media (max-width: 800px) {
+  body {
+    margin: 0 auto;
+  }
+
+  * {
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
+}
+
+.no-padding {
+  padding: 0px !important;
+  margin-top: 70px !important;
 }
