--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -36,6 +36,59 @@ input[type="radio"] {
   -webkit-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
   -moz-box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75) inset;
 }
+
+@media (max-width: 800px) {
+  .card-container {
+    padding-bottom: 200px;
+    width: 50vh;
+  }
+
+  .card-img {
+    width: 50vh !important;
+    height: 30%;
+  }
+
+  .project-title {
+    padding: 0;
+    margin: 0;
+    font-size: 0.7em !important;
+  }
+
+  .project-text {
+    padding-top: 25px !important;
+    padding-bottom: 20px;
+    font-size: 0.5em !important;
+    max-width: 80%;
+    letter-spacing: 0.3em;
+  }
+
+  .cards {
+    width: 100%;
+  }
+  #item-1:checked ~ .cards #card-3,
+  #item-2:checked ~ .cards #card-1,
+  #item-3:checked ~ .cards #card-2 {
+    transform: translatex(-25%) scale(0.8) !important;
+    opacity: 0.3;
+    z-index: 0;
+  }
+
+  #item-1:checked ~ .cards #card-2,
+  #item-2:checked ~ .cards #card-3,
+  #item-3:checked ~ .cards #card-1 {
+    transform: translatex(25%) scale(0.8) !important;
+    opacity: 0.3;
+    z-index: 0;
+  }
+
+  #item-1:checked ~ .cards #card-1,
+  #item-2:checked ~ .cards #card-2,
+  #item-3:checked ~ .cards #card-3 {
+    transform: translatex(0) scale(1);
+    opacity: 1;
+    z-index: 1;
+  }
+}
 .project-textarea {
   width: 35%;
   display: flex;
