--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -116,6 +116,7 @@ input[type="radio"] {
 .project-img {
   height: 100%;
   width: 65%;
+  filter: grayscale(70%);
   box-shadow: 0px 1px 30px -1px rgba(0, 0, 0, 0.75);
 }
 
@@ -141,4 +142,9 @@ input[type="radio"] {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
+}
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
 }
